--- a/20231022_masuda/index.html
+++ b/20231022_masuda/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class=>COACHTECH</h1>
+        <h1>COACHTECH</h1>
         <nav>
             <ul>
                 <li><a href="#">ホーム</a></li>
